--- a/pages/score/index.wxml
+++ b/pages/score/index.wxml
@@ -1,2 +1,33 @@
-<!--pages/score/index.wxml-->
-<text>pages/score/index.wxml</text>
+<view class="container">
+  <view class="header">
+    <view class="score-type">
+      <view bindtap="changeScoreType" data-type="1" class="eff-score {{type == 1 ? 'active' : ''}}">有效成绩</view>
+      <view bindtap="changeScoreType" data-type="2" class="raw-score {{type == 2 ? 'active' : ''}}">原始成绩</view>
+    </view>
+    <view class="score-term">
+    <picker mode="selector" range="{{scoreList}}" range-key="termName" value="{{termIndex}}" bindchange="changeTerm">
+      选择学期 <text class="cuIcon-unfold"></text>
+    </picker>
+    </view>
+
+    <view class="update-btn" bindtap="updataScore">
+      <text class="cuIcon-refresh"></text>
+    </view>
+  </view>
+  <view class="main">
+    <view class="tit">{{scoreList[termIndex].termName}}</view>
+    <view class="list">
+      <view class="score-item" wx:for="{{scoreList[termIndex].scoreList}}" wx:key="num">
+        <view class="leftPart">
+          <view class="course-name">{{item.name}}</view>
+          <view class="raw-score_content" wx:if="{{type == 2}}">
+            <view wx:if="{{item.normalScore}}">平时：{{item.normalScore}}</view>
+            <view><text wx:if= "{{item.midtermScore}}">期中：{{item.midtermScore}}</text> <text wx:if="{{item.finalScore}}">期末：{{item.finalScore}}</text></view>
+          </view>
+        </view>
+        <view wx:if="{{type == 1}}" class="course-score {{item.score < 60 ? 'fail':''}}">{{item.score}}</view>
+        <view wx:if="{{type == 2}}" class="course-score {{item.complexScore < 60 ? 'fail':''}}">{{item.complexScore}}</view>
+      </view>
+    </view>
+  </view>
+</view>
