--- a/pages/course-detail/index.wxml
+++ b/pages/course-detail/index.wxml
@@ -1,2 +1,18 @@
-<!--pages/course-detail/index.wxml-->
-<text>pages/course-detail/index.wxml</text>
+<cu-custom bgColor="bg-white" isBack="{{true}}">
+  <view slot="content">课程详情</view>
+</cu-custom>
+<view class="container">
+  <view class="info-box">
+    <view class="course-title">{{info.name}}</view>
+    <view class="info-list">
+      <view class="info-item" wx:for="{{infoRef}}">
+        <view class="info-item__key">
+          {{item.title}}
+        </view>
+        <view class="info-item__val">
+          {{info[item.key]}}
+        </view>
+      </view>
+    </view>
+  </view>
+</view>
