--- a/pages/course-detail/index.wxss
+++ b/pages/course-detail/index.wxss
@@ -1,1 +1,29 @@
-/* pages/course-detail/index.wxss */
+page{
+  background: #fafafa;
+}
+.info-box{
+  background: #fff;
+  padding: 30rpx 30rpx 0;
+}
+.course-title{
+  font-size: 32rpx;
+  color: #333333;
+}
+.info-list{
+  margin-top: 20rpx;
+}
+.info-item{
+  display: flex;
+  align-items: center;
+  padding: 24rpx 0;
+}
+.info-item:not(:last-child){
+  border-bottom: 1rpx solid #eee;
+}
+.info-item__key{
+  color: #00cccc;
+  margin-right: 40rpx;
+}
+.info-item__val{
+  color: #666666;
+}
