--- a/utils/tools.wxs
+++ b/utils/tools.wxs
@@ -4,7 +4,16 @@ function indexOf(arr, val) {
   }
   return false
 }
+// 处理阿拉伯数字转为中文
+function changeNum(num){
+  // 不能使用ES6的语法
+  var arr = ['日','一','二','三','四','五','六']
+  return arr[num]
+}
+
+
 // node的模块导出
 module.exports = {
-  indexOf:indexOf
+  indexOf:indexOf,
+  changeNum:changeNum
 }
